Minor spacing fix on logo and spirit selector

--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 backdrop-filter: blur(7.1px);
 -webkit-backdrop-filter: blur(7.1px);
 border: 1px solid rgba(255, 255, 255, 0.43);
-padding-top: 1rem;
+padding-top: .5rem;
 padding-bottom: 1rem;
 }
 
